# NuDaVizEngine

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/nudavizengine/: __init__.py
src/nudavizengine/dataset/: __init__.py  bandstructure_dataset_Quantum_Espresso71.py  dataset.py  dataset_io.py  uvvis_dataset_Gaussian16.py  uvvis_dataset_hp8453.py
src/nudavizengine/scientific_data/: __init__.py
src/nudavizengine/scientific_data/electronic_structure/: DOS.py  band_structure.py
src/nudavizengine/scientific_data/spectroscopy/: __init__.py  base_spectra.py  ir_spectra.py  uvvis_spectra.py
src/nudavizengine/utils/: __init__.py  io_handler.py  str_utils.py
src/nudavizengine/visualizers/: __init__.py  base_visualizer.py  matplotlib_visualizer.py  visualizer_registry.py
