[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nudavizengine"
version = "0.0.1"
description = "NUDaVizEngine: A modular Python data visualization and analysis engine for scientific research."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Theodore Wynter", email = "nanouncovered@gmail.com"}
]
maintainers = [
    {name = "Theodore Wynter", email = "nanouncovered@gmail.com"}
]
keywords = ["scientific", "data-visualization", "UVVis", "nanosensor", "chemistry", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Chemistry"
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.1",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "scipy>=1.11"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=24.3",
    "flake8>=6.1",
    "isort>=6.0",
    "mypy>=1.6"
]

[tool.setuptools.packages.find]
where = ["src"]
